--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "framer-motion": "^12.19.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "next": "15.3.4",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0"
