--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.6.1",
     "exceljs": "^4.4.0",
-    "express": "^5.1.0",
+    "express": "5.0.0-beta.1",
     "express-rate-limit": "^7.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
