--- a/.gitignore
+++ b/.gitignore
@@ -39,10 +39,36 @@
 logs
 *.log
 npm-debug.log*
+# Node
+node_modules/
+
+# Logs
+npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
+# Env
+.env
+.env.local
+backend/.env
+frontend/.env
+
+# Build outputs
+frontend/.next/
+frontend/out/
+frontend/coverage/
+frontend/.turbo/
+frontend/.vercel/
+frontend/tsconfig.tsbuildinfo
+
+# Editor
+.DS_Store
+.idea/
+.vscode/
+
+# Misc
+*.local
 # OS-specific files
 .DS_Store
 Thumbs.db
