--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,16 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "csurf": "^1.2.2",
     "dotenv": "^16.6.1",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "nodemailer": "^7.0.3",
