--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "@tanstack/react-query": "^5.59.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
