--- a/backend/package.json
+++ b/backend/package.json
@@ -24,13 +24,15 @@
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.1",
-    "nodemailer": "^7.0.3",
+    "mongoose": "^8.18.2",
+    "nodemailer": "^7.0.6",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "jest": "^30.0.3",
-    "supertest": "^7.1.1"
+    "jest": "^30.1.3",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.4",
+    "typescript": "^5.9.2"
   },
   "engines": {
     "node": "20.x"
