--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,40 +11,40 @@
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
-    "axios": "^1.10.0",
-    "framer-motion": "^12.19.1",
-    "jspdf": "^3.0.1",
+    "@tanstack/react-query": "^5.90.2",
+    "axios": "^1.12.2",
+    "framer-motion": "^12.23.19",
+    "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
-    "next": "^15.3.4",
-    "react": "^19.0.0",
-    "react-day-picker": "^9.7.0",
-    "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0",
-    "@tanstack/react-query": "^5.59.0"
+    "next": "^15.5.4",
+    "react": "^19.1.1",
+    "react-day-picker": "^9.11.0",
+    "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@eslint/eslintrc": "^3",
-    "@next/bundle-analyzer": "^15.3.4",
-    "@tailwindcss/postcss": "^4",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@next/bundle-analyzer": "^15.5.4",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "babel-jest": "^30.0.2",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.4",
-    "jest": "^30.0.3",
-    "jest-environment-jsdom": "^30.0.2",
-    "tailwindcss": "^4",
-    "ts-jest": "^29.4.0",
+    "@types/node": "^20.19.17",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "babel-jest": "^30.1.2",
+    "eslint": "^9.36.0",
+    "eslint-config-next": "^15.5.4",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
+    "tailwindcss": "^4.1.13",
+    "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
